--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     ]
   },
   "require": {
-    "phpmailer/phpmailer": "~6.0"
+    "phpmailer/phpmailer": "~6.0",
+    "league/plates": "v3.4.0"
   }
 }
