--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
   },
   "require": {
     "phpmailer/phpmailer": "~6.0",
-    "league/plates": "v3.4.0"
+    "league/plates": "v3.4.0",
+    "coffeecode/optimizer": "2.0.*"
   }
 }
